--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -45,7 +45,16 @@
       <nav id="navbar" class="navbar">
        
         <ul>
-          <li><a class="getstarted scrollto" href="/#home">Logout</a></li>
+          <li>
+           
+            <a class="getstarted scrollto" href="/internship">Internship</a>
+            <li>
+              <a class="getstarted scrollto" href="/#home">Logout</a>
+            </li>
+        </li>
+       <!--    <div class="aptitude" id="aptitudeButton">
+            <input type="button"  value="Aptitude"  style="background: transparent; border: none; color: white;">
+        </div> -->
         <!--   <li><button id="toggle-theme-btn" onclick="toggleTheme()">Toggle Theme</button></li> --> 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -109,6 +118,11 @@ function handleKeyPress(event) {
   
     // Call setInitialTheme on page load
     window.addEventListener('load', setInitialTheme);
+
+
+
+
+    
   </script>
   
   <!-- Vendor JS Files -->
