--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -46,17 +46,33 @@
        
         <ul>
           <li>
-           
             <a class="" href="/aptitude">Aptitude</a>
-            <li>
-              <a class="getstarted scrollto" href="/#home">Logout</a>
-            </li>
-        </li>
-       <!--    <div class="aptitude" id="aptitudeButton">
-            <input type="button"  value="Aptitude"  style="background: transparent; border: none; color: white;">
-        </div> -->
-        <!--   <li><button id="toggle-theme-btn" onclick="toggleTheme()">Toggle Theme</button></li> --> 
+          </li>
+          <li class="dropdown-container">
+            <a class="dropdown-toggle" href="#">Internship</a>
+            <ul class="dropdown">
+              <li><a href="https://internshala.com/internships/computer-science-internship/">Computer Science</a></li>
+              <li><a href="https://internshala.com/internships/mechanical-internship/">Mechanical Engineering</a></li>
+              <li><a href="https://internshala.com/internships/medicine-internship/">MBBS</a></li>
+              <li><a href="https://internshala.com/internships/electrical-internship/">Electrical Engineering</a></li>
+              <li><a href="https://internshala.com/internships/business-development-internship/">Business Administration</a></li>
+              <li><a href="https://internshala.com/internships/graphic-design-internship/">Graphic Design</a></li>
+              <li><a href="https://internshala.com/internships/finance-internship/">Finance</a></li>
+              <li><a href="https://internshala.com/internships/environmental-sciences-internship/">Environmental Science</a></li>
+              <li><a href="https://internshala.com/internships/software-development-internship/">Software Engineering</a></li>
+              <li><a href="https://internshala.com/internships/civil-internship/">Civil Engineering</a></li>
+              <li><a href="https://internshala.com/internships/marketing-internship/">Marketing</a></li>
+              <li><a href="https://internshala.com/internships/psychology-internship/">Psychology</a></li>
+              <li><a href="https://internshala.com/internships/hr-internship/">Human Resources</a></li>
+
+
+            </ul>
+          </li>
+          <li>
+            <a class="getstarted scrollto" href="/#home">Logout</a>
+          </li>
         </ul>
+        
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
     </div>
